<resources>
    <string name="app_name">DSA</string>
    <string name="titConfig">Configuración</string>
    <string name="msj">Necesito ayuda</string>
    <string name="numero">Número</string>
    <string name="enviar">Enviar</string>
    <string name="btnSeleccionar">Seleccionar contacto</string>
    <string name="cant">Cantidad msj</string>
    <string name="btnwhatsapp">ENVIAR POR WHATSAPP</string>

    <!--ACTIVITY REGISTRARSE-->
    <string name="titulo">DISCRET SECURITY APP</string>
    <string name="nombre">Nombre</string>
    <string name="email">Correo electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="pass2">Confirmar contraseña</string>
    <string name="btnRegistrarse">Registrarse</string>

    <!-- ACTIVITY MENU -->
    <string name="menu">Discret Security App</string>
    <string name="btnfunciona">¿Cómo funciona?</string>
    <string name="btnConfig">Configuración</string>
    <string name="btnSalir">Salir</string>

    <!-- ACTIVITY COMO FUNCIONA -->

    <!-- ACTIVITY CONFIG -->
    <string name="btnSeleccionarContactos">Contactos de emergencia</string>
    <string name="lblContactos">Contactos seleccionados:</string>
    <string name="ActivarNotificaciones">Activar notificaciones: </string>
    <string name="btnMenu">MENÚ</string>
    <string name="btnGuardar">GUARDAR</string>
    <string name="title_activity_como_funciona_3">ComoFunciona_3</string>
    <string name="tema">Escoger tema para tu aplicación</string>
    <string name="tema1">TEMA OBSCURO</string>
    <string name="tema2">TEMA PRIMAVERA</string>
    <string name="tema3">TEMA INVIERNO</string>
    <string name="tema4">TEMA VERANO</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>