<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConexionWhats">

    <TextView
        android:id="@+id/txtConfig"
        android:layout_width="396dp"
        android:layout_height="41dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/titConfig"
        android:textColor="#070707"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/InputMsj"
        android:layout_width="309dp"
        android:layout_height="38dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/msj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfig" />

    <EditText
        android:id="@+id/txtNum"
        android:layout_width="274dp"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/numero"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSeleccionar" />

    <Button
        android:id="@+id/btnSeleccionar"
        android:layout_width="245dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:onClick="contactos"
        android:text="@string/btnSeleccionar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputMsj" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="196dp"
        android:layout_height="45dp"
        android:layout_marginTop="36dp"
        android:onClick="btnsms"
        android:text="@string/enviar"
        app:backgroundTint="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cant" />

    <EditText
        android:id="@+id/cant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/cant"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNum" />

    <Button
        android:id="@+id/btnWhatsapp"
        android:layout_width="210dp"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        android:onClick="btnwhatsapp"
        android:text="@string/btnwhatsapp"
        app:backgroundTint="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEnviar" />

</androidx.constraintlayout.widget.ConstraintLayout>