<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".configuracion">

    <Button
        android:id="@+id/btnContactos"
        android:layout_width="170dp"
        android:layout_height="79dp"
        android:layout_marginTop="64dp"
        android:onClick="Selec_contactos"
        android:text="@string/btnSeleccionarContactos"
        app:backgroundTint="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contactos"
        android:layout_width="292dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/lblContactos"
        android:textColor="#0B0B0B"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnContactos" />

    <TextView
        android:id="@+id/listaContactos"
        android:layout_width="279dp"
        android:layout_height="145dp"
        android:layout_marginTop="20dp"
        android:background="#F8F3F3"
        android:textColor="#070707"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactos" />

    <Button
        android:id="@+id/btnMenu"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:layout_marginBottom="136dp"
        android:onClick="guardar"
        android:text="@string/btnGuardar"
        app:backgroundTint="#8BC34A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tema"
        app:layout_constraintVertical_bias="0.963" />

    <Button
        android:id="@+id/btnSalirConfig"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginBottom="140dp"
        android:onClick="regresar_menu"
        android:text="@string/btnMenu"
        app:backgroundTint="#1D2A75"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnMenu"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tema"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="114dp"
        android:layout_height="77dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toStartOf="@+id/btnContactos"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_azul" />

    <TextView
        android:id="@+id/tema"
        android:layout_width="294dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/tema"
        android:textColor="#050505"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/listaContactos"
        tools:layout_editor_absoluteX="53dp" />

</androidx.constraintlayout.widget.ConstraintLayout>